# vehicle-countor

./: .gitignore  README.md  pyproject.toml
code/: VIDEO.md  int8RT.py  main.py  requirements.txt  viz_count.py  webui.py
code/tracker/: deep_sort.py
code/tracker/sort/: nn_matching.py
code/yolov5/: detect.py  train.py
code/yolov5/data/: mydata.yaml
code/yolov5/data/mydata/: extract_frames.py  launch_labelimg.bat  launch_labelimg.ps1  run_labelimg.py  split_dataset.py  test.txt  train.cache.npy  train.txt  val.cache.npy  val.txt  voc2yolo_label.py  yolo2voc.py
code/yolov5/data/mydata/dataSet/: test.txt  train.txt  trainval.txt  val.txt
code/yolov5/data/mydata/labels/: 1.txt  16.txt  5.txt  7.txt  london_000.txt  london_001.txt  london_002.txt  london_003.txt  london_004.txt  london_005.txt  london_006.txt  london_007.txt  london_008.txt  london_009.txt  london_010.txt  london_011.txt  london_012.txt  london_013.txt  london_014.txt  london_015.txt  london_016.txt  london_017.txt  london_018.txt  london_019.txt  london_020.txt  london_021.txt  london_022.txt  london_023.txt  london_024.txt  london_025.txt  london_026.txt  london_027.txt  london_028.txt  london_029.txt  london_030.txt  london_031.txt  london_032.txt  london_033.txt  london_034.txt  london_035.txt  (+39 more)
code/yolov5/data/mydata/xml/: london_000.txt  london_000.xml  london_001.txt  london_001.xml  london_002.txt  london_002.xml  (+90 more)
code/yolov5/models/: common.py  custom_yolov5s.yaml  yolov5n.yaml
code/yolov5/utils/: datasets.py  general.py  metrics.py  plots.py
video/: README.md
weights/: README.md
