[project]
name = "vehicle-countor"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tensorrt>=11.1.0.106",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
